--- a/src/components/Designer/Substitutions/SubstitutionsTable/SubstitutionsTable.module.scss
+++ b/src/components/Designer/Substitutions/SubstitutionsTable/SubstitutionsTable.module.scss
@@ -10,7 +10,7 @@
         table-layout: fixed;
         border-collapse: collapse;
         text-align: left;
-        font-family: $font-node-nav-header;
+        ;
 
         th {
             text-align: center;
