--- a/src/components/Designer/TopMenu/CentralPanel/CentralPanel.module.scss
+++ b/src/components/Designer/TopMenu/CentralPanel/CentralPanel.module.scss
@@ -16,7 +16,7 @@
     .nav_list_item {
 
       margin-right: 30px;
-      font-family: $font-node-nav-header;
+      ;
 
       padding: 0;
       cursor: pointer;
@@ -35,7 +35,7 @@
         border: 0;
         border-radius: 5px;
         color: white;
-        font-family: $font-node-nav-header;
+        ;
 
 
 
