--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -78,7 +78,7 @@
             background-image: linear-gradient(white, rgb(179, 209, 170));
             padding: 20px 40px 100px 40px;
             position: relative;
-            font-family: $font-node-nav-header;
+            ;
             font-weight: $font-weight-regular;
             font-variation-settings: 'slnt';
             border-radius: 5px;
@@ -125,7 +125,7 @@
                     border-top: 1px solid #b9d3a1;
                     border-bottom-left-radius: 5px;
                     border-bottom-right-radius: 5px;
-                    font-family: $font-node-nav-header;
+                    ;
                     font-size: 1.5rem;
                     background-color: #aad4a6;
                     font-weight: bolder;
