--- a/src/components/Server/LeftPanel/LeftPanel.module.scss
+++ b/src/components/Server/LeftPanel/LeftPanel.module.scss
@@ -51,7 +51,7 @@
           align-items: center;
           padding-left: 10px;
           height: 40px;
-          font-family: $font-node-nav-header;
+          ;
           color: $color-node-nav-container-header;
 
           span {
@@ -73,7 +73,6 @@
           color: $color-node-nav-container-header;
           text-align: left;
           padding-left: 20px;
-          font-family: $font-node-nav-list;
         }
 
         .header_icon {
