--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -9,13 +9,15 @@ $bg-top-menu-btn-default: rgb(74, 148, 190);
 $bg-top-menu-btn-hover: rgb(55, 109, 139);
 $bg-top-menu-btn-active: rgb(39, 74, 94);
 $bg-delete-btn: rgb(230, 56, 56);
+
 //--COLORS--
-$color-node-nav-container-header: rgb(114, 114, 114);
-$color-node-nav-btn: rgb(31, 31, 31);
-$color-list-border: rgb(238, 238, 238);
-$color-list-border-darker: rgb(221, 221, 221);
 $color-list-label: #727272;
 $color-font-main: rgb(53, 53, 53);
+$color-node-nav-container-header: rgb(114, 114, 114);
+
+$color-list-border: rgb(238, 238, 238);
+$color-list-border-darker: rgb(221, 221, 221);
+$color-node-nav-btn: rgb(31, 31, 31);
 
 //icons colors
 $color-node-nav-icon: rgb(35, 124, 175);
@@ -30,14 +32,13 @@ $shadow-inset: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5
 
 //--FONTS--
 // $font-node-nav-list: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-$font-node-nav-list: 'Inter';
-$font-node-nav-header: 'Inter';
+// $font-node-nav-list: 'Inter';
+// $font-node-nav-header: 'Inter';
 
 //--FONT WEIGHTS
 $font-weight-regular : 300;
 $font-weight-bold : 400;
 $font-weight-bolder : 500;
-
 
 //--BREAKPOINTS--
 $breakpoint-xs: 576px;
