--- a/src/components/Modals/FlowsListModal/FlowsListModal.module.scss
+++ b/src/components/Modals/FlowsListModal/FlowsListModal.module.scss
@@ -2,25 +2,11 @@
 @import "/src/style/mixins.scss";
 
 .container {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  padding: 20px;
-  border: 1px solid #e4e4e4;
-  border-radius: 5px;
-  width: 500px;
-  padding-top: 0;
-  z-index: 1000;
-  font-family: $font-node-nav-list;
-  color: $color-node-nav-container-header;
+  @include modal_container;
 
   h3 {
     text-align: center;
   }
-
-
 
   .body {
     border-radius: 5px;
