--- a/src/components/Modals/ModalWindow.module.scss
+++ b/src/components/Modals/ModalWindow.module.scss
@@ -1,52 +1,25 @@
 @import "/src/style/variables.scss";
+@import "/src/style/mixins";
 
 .container {
-    width: 100vw;
-    height: 100vh;
-    z-index: 9999;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: fixed;
+    @include modal_container;
 }
 
 
 .modal_window {
-    padding: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    color: rgb(0, 0, 0);
-    z-index: 9999;
-    border-radius: 16px;
-    box-shadow: $shadow-node-nav-container;
-    overflow: wrap;
-    min-width: 300px;
-    min-height: 100px;
-    font-family: $font-node-nav-list;
-    color: $color-font-main;
+    @include modal_window;
 
 }
 
 
 .modal_header {
-    text-align: center;
-    font-weight: $font-weight-bolder;
-
-
-    margin-bottom: 20px;
+    @include modal_header;
 
 }
 
 
 .modal_body {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    font-size: 0.9rem;
-
+    @include modal_body;
 
     span {
         font-weight: bolder;
