--- a/src/components/Modals/UserModals/AddUserModal/AddUserModal.module.scss
+++ b/src/components/Modals/UserModals/AddUserModal/AddUserModal.module.scss
@@ -2,57 +2,34 @@
 @import "/src/style/mixins.scss";
 
 .container {
-    width: 100vw;
-    height: 100vh;
-    z-index: 9999;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: fixed;
+    @include modal_container;
 }
 
 
 .modal_window {
-    padding: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    color: rgb(0, 0, 0);
-    z-index: 9999;
-    border-radius: 16px;
-    box-shadow: $shadow-node-nav-container;
-    overflow: wrap;
-    min-width: 400px;
-    min-height: 100px;
-    color: $color-font-main;
+    @include modal_window;
 
 }
 
 
 .modal_header {
-    text-align: center;
-    font-weight: $font-weight-bolder;
-    margin-bottom: 20px;
+    @include modal_header;
 
 }
 
 
 .modal_body {
-    margin-bottom: 20px;
-    font-size: 0.9rem;
+    @include modal_body;
 
     .form {
-        display: grid;
-
-        gap: 20px;
-        align-items: start;
+        @include modal_form;
 
         label,
         input {
             display: inline-block;
             margin-bottom: 10px;
+
+
         }
 
         label {
@@ -61,16 +38,10 @@
 
         .text_values_wrapper {
 
-            textarea {
-                resize: none;
-                border: 1px solid $color-list-border-darker;
-                min-height: 100px;
-                padding: 5px;
-            }
-
             .text_values_item {
                 display: grid;
                 grid-template-columns: 4fr 8fr;
+
             }
 
             label,
@@ -80,32 +51,55 @@
             }
 
             input {
-
+                width: 100%;
                 border-radius: 5px;
                 border: 1px solid $color-list-border-darker;
                 padding-left: 5px;
 
             }
+
+
+            .generate_password_btn {
+                position: absolute;
+                top: 117px;
+                right: 12px;
+
+                button {
+                    @include blue_btn;
+                    font-size: 0.6rem;
+                    padding: 3px;
+                }
+            }
         }
 
         .dropdown_wrapper {
 
-
             .dropdown_item {
                 display: grid;
-
-
-                label {
-                    font-weight: 400;
-                }
 
                 select {
                     overflow-y: auto;
                     padding: 5px;
-
-                    border: 1px solid $color-list-border-darker;
                 }
 
+                .group_wrapper {
+                    max-height: 100px;
+                    border: 1px solid $color-list-border-darker;
+                    padding: 5px;
+                    border-radius: 5px;
+                    overflow-y: auto;
+                    margin-bottom: 10px;
+
+                    .group_wrapper_item {
+                        display: grid;
+                        grid-template-columns: 8fr 4fr;
+                        align-items: start;
+                    }
+
+                    label {
+                        font-weight: 400;
+                    }
+                }
             }
         }
 
