--- a/src/components/Modals/UserModals/EditUserModal/EditUserModal.module.scss
+++ b/src/components/Modals/UserModals/EditUserModal/EditUserModal.module.scss
@@ -2,60 +2,29 @@
 @import "/src/style/mixins.scss";
 
 .container {
-    width: 100vw;
-    height: 100vh;
-    z-index: 9999;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: fixed;
+    @include modal_container
 }
 
 
 .modal_window {
-    padding: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    color: rgb(0, 0, 0);
-    z-index: 9999;
-    border-radius: 16px;
-    box-shadow: $shadow-node-nav-container;
-    overflow: wrap;
-    min-width: 400px;
-    min-height: 100px;
-    font-family: $font-node-nav-list;
-    color: $color-font-main;
-
+    @include modal_window
 }
 
 
 .modal_header {
-    text-align: center;
-    font-weight: $font-weight-bolder;
-    margin-bottom: 20px;
-
+    @include modal_header
 }
 
-
 .modal_body {
-    margin-bottom: 20px;
-    font-size: 0.9rem;
+    @include modal_body;
 
     .form {
-        display: grid;
-
-        gap: 20px;
-        align-items: start;
+        @include modal_form;
 
         label,
         input {
             display: inline-block;
             margin-bottom: 10px;
-
-
         }
 
         label {
@@ -96,6 +65,62 @@
                     padding: 3px;
                 }
             }
+
+
+        }
+
+        .reset_password_wrapper {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            width: 100%;
+
+
+            .reset_password_item {
+                margin-bottom: 10px;
+                display: grid;
+                grid-template-columns: 4fr 8fr;
+
+                .reset_password_btn {
+                    background-color: white;
+                    border: 0;
+                    text-decoration: underline;
+                    grid-column: 1/3;
+                    outline: none;
+                }
+
+                .generate_password_btn {
+                    position: absolute;
+                    top: 26px;
+                    right: 0px;
+                    cursor: pointer;
+
+                    button {
+                        @include blue_btn;
+                        font-size: 0.6rem;
+                        padding: 3px;
+                    }
+                }
+
+                input {
+                    border-radius: 5px;
+                    border: 1px solid $color-list-border-darker;
+                    padding-left: 5px;
+                }
+
+            }
+
+            .reset_password_footer {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                button {
+                    @include blue_btn;
+                }
+            }
+
+
         }
 
         .dropdown_wrapper {
