--- a/src/components/Notifications/AddNotificationForm/AddNotificationForm.module.scss
+++ b/src/components/Notifications/AddNotificationForm/AddNotificationForm.module.scss
@@ -3,7 +3,7 @@
 
 .wrapper {
   position: relative;
-  font-family: $font-node-nav-header;
+  ;
 
   .toggle_btn_wrapper {
     position: absolute;
@@ -21,15 +21,17 @@
 
     &.opened {
       transform: translateY(0);
-      
+
     }
 
     &.closed {
       transform: translateY(-100%);
       height: 37px;
-      header,form{
+
+      header,
+      form {
         display: none;
-        
+
       }
     }
 
@@ -41,7 +43,7 @@
       color: $color-list-label;
       font-weight: $font-weight-bolder;
       margin-bottom: 10px;
-     
+
     }
 
     .new_notification_form {
@@ -81,7 +83,8 @@
           outline: none;
         }
 
-        input,textarea{
+        input,
+        textarea {
           padding: 5px;
         }
 
