--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -8,7 +8,7 @@
     margin-right: 20px;
     height: 100%;
     position: relative;
-    font-family: $font-node-nav-header;
+    ;
 
 
     span {
@@ -34,6 +34,7 @@
             margin-bottom: 20px;
         }
 
+
         main {
             display: flex;
             flex-direction: column;
@@ -41,6 +42,15 @@
         }
 
         .account_info_wrapper {
+            position: relative;
+
+            .edit_btn {
+                position: absolute;
+                top: -15px;
+                right: 0;
+                color: $color-list-label;
+                cursor: pointer;
+            }
 
             .account_info_item {
                 display: flex;
