--- a/src/components/Server/CenterPanel/Security/GroupsTable/GroupsTable.module.scss
+++ b/src/components/Server/CenterPanel/Security/GroupsTable/GroupsTable.module.scss
@@ -4,7 +4,6 @@
 .wrapper {
 
     padding: 10px;
-    ;
 
     header {
         color: $color-font-main;
@@ -15,55 +14,18 @@
         max-height: 500px;
 
         table {
-
             @include server_table;
-            height: 200px !important;
-
             table-layout: fixed;
-            word-break: normal;
+            font-size: 0.9rem;
 
             tbody {
-                tr {
-                    td {
-                        text-overflow: ellipsis;
-                    }
-                }
-
-
-                .contacts {
-                    font-size: 0.8rem;
-
-                    span {
-                        font-weight: bold;
-                    }
-                }
+                @include user_group_table_body;
 
                 .table_actions {
-                    text-align: center;
-
-                    button {
-                        @include blue_btn;
-                        margin-left: 5px;
-                    }
-
-                    .delete_btn {
-                        background-color: $bg-delete-btn;
-                    }
-
-                }
-
-                ul {
-                    padding: 0;
-
-                    li {
-                        list-style: none;
-                    }
+                    @include user_group_table_actions_column;
                 }
             }
-
         }
-
-
     }
 
     .add_group_wrapper {
