--- a/src/components/Server/CenterPanel/Security/UsersTable/UsersTable.module.scss
+++ b/src/components/Server/CenterPanel/Security/UsersTable/UsersTable.module.scss
@@ -12,6 +12,7 @@
     .table_container {
         overflow-y: auto;
         max-height: 500px;
+        border-bottom: 1px solid $color-list-border-darker;
 
         table {
 
@@ -39,6 +40,8 @@
                     @include user_group_table_actions_column;
                 }
             }
+
+
         }
     }
 
