refactoring in process

--- a/src/components/Designer/TopMenu/TopMenu.module.scss
+++ b/src/components/Designer/TopMenu/TopMenu.module.scss
@@ -17,6 +17,12 @@
     left: 0;
     right: 0;
 
+    .settings_wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
     @media print {
         display: none;
     }
