--- a/src/components/Notifications/AddNotificationForm/AddNotificationForm.module.scss
+++ b/src/components/Notifications/AddNotificationForm/AddNotificationForm.module.scss
@@ -3,36 +3,33 @@
 
 .wrapper {
   position: relative;
-
-
+  
   .toggle_btn_wrapper {
     position: absolute;
-    z-index: 1000;
     top: 5px;
     left: 20px;
 
     button {
       @include blue_btn;
+     
     }
   }
 
   .form_wrapper {
     font-size: 0.8rem;
-
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    position: sticky;
     &.opened {
       transform: translateY(0);
-
     }
 
     &.closed {
-      transform: translateY(-100%);
+      transform: translateY(-500px);
+      z-index: -1;
       height: 37px;
 
-      header,
-      form {
-        display: none;
-
-      }
     }
 
     transition: transform 0.3s ease-in-out;
@@ -52,7 +49,7 @@
       padding: 20px;
       grid-template-columns: repeat(3, 4fr);
       gap: 30px;
-      width: 900px;
+      width: 800px;
       margin-left: auto;
       margin-right: auto;
       border-radius: 5px;
