--- a/src/components/Designer/RightPanel/Properties/CustomProperties/CustomPropertiesList/CustomPropertiesListItem/CustomPropertiesListItem.module.scss
+++ b/src/components/Designer/RightPanel/Properties/CustomProperties/CustomPropertiesList/CustomPropertiesListItem/CustomPropertiesListItem.module.scss
@@ -15,6 +15,7 @@
     height: 41px;
 
     button {
+        cursor: pointer;
         border: 0;
         border-radius: 5px;
         color: white;
