--- a/src/components/Designer/Substitutions/Substitutions.module.scss
+++ b/src/components/Designer/Substitutions/Substitutions.module.scss
@@ -90,6 +90,7 @@
         border: 0;
         border-top-right-radius: 3px;
         border-bottom-right-radius: 3px;
+        cursor: pointer;
         height: 22px;
     }
 
