--- a/src/components/Server/Header/Header.module.scss
+++ b/src/components/Server/Header/Header.module.scss
@@ -10,7 +10,7 @@
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (max-width:$breakpoint-lg) {
+    @media screen and (max-width: $breakpoint-lg) {
       font-size: 1rem;
     }
   }
@@ -21,19 +21,28 @@
     align-items: center;
     z-index: 1000;
 
-    .alerts_button,
+    .notifications_button,
     .designer_button {
       color: white;
-
+      position: relative;
       button {
         @include server_header_btn;
         margin-left: 20px;
       }
     }
 
+    .notifications_button {
+      span {
+        position: absolute;
+        right: -10px;
+        top: -8px;
+        background-color: red;
+        color: white;
+        border-radius: 50%;
+        padding: 2px 5px;
+        font-size: 12px;
+
+      }
+    }
   }
-
-
-
-
 }
