--- a/src/components/Server/Header/Header.module.scss
+++ b/src/components/Server/Header/Header.module.scss
@@ -45,4 +45,12 @@
       }
     }
   }
+
+  .nav_right_btns_wrapper {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: right;
+    z-index: 1000;
+  }
 }
