--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -31,6 +31,15 @@
   align-items: center;
 }
 
+@mixin nav_right_section{
+  display: flex;
+    height: 100%;
+    align-items: center; 
+    justify-self: right;
+    justify-items:flex-start;
+    z-index: 1000;
+}
+
 //Left Panel
 @mixin left_panel_btn($bg) {
 
