finished log search component

--- a/src/components/Server/CenterPanel/Server/LogSearch/LogSearch.module.scss
+++ b/src/components/Server/CenterPanel/Server/LogSearch/LogSearch.module.scss
@@ -13,7 +13,7 @@
 
     .log_grid{
         display: grid;
-        grid-template-columns: 2fr 2fr 5fr 3fr;
+        grid-template-columns: 3fr 3fr 6fr;
         gap: 10px;
       
 
