--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   }
 }
 
-.dynamic_menu {
+.resized_dynamic_menu,.dynamic_menu {
   position: absolute;
   overflow: hidden;
   top: 40px;
@@ -21,7 +21,19 @@ body {
   right: 0;
   bottom: 0;
   display: grid;
+}
+
+.dynamic_menu{
   grid-template-columns: 1.4fr 6fr 1.4fr;
+}
+
+.resized_dynamic_menu{
+  grid-template-columns: 1.7fr 6fr 3fr;
+}
+
+.resizable{
+  background-color: red;
+  z-index: 99999;
 }
 
 
