--- a/src/components/Server/CenterPanel/Server/LogSearch/LogTable/LogTable.module.scss
+++ b/src/components/Server/CenterPanel/Server/LogSearch/LogTable/LogTable.module.scss
@@ -4,19 +4,34 @@
 .wrapper{
 
     .table_wrapper{
-        max-height: 600px;
+        max-height: 800px;
         overflow-y: auto;
+        margin-bottom: 20px;
 
         table{
             @include server_table;
             table-layout: fixed;
     
             tr{
-                td{
+      
+                th,td{
                     font-size: 0.8rem;
                 }
             }
             
+        }
+    }
+
+    .table_footer_wrapper{
+        display: flex;
+        justify-content: center;
+
+        button{
+            @include blue_btn;
+        }
+        span{
+            margin-left: 10px;
+            margin-right: 10px;
         }
     }
    
