--- a/src/components/Server/CenterPanel/Server/Kpis/Kpis.module.scss
+++ b/src/components/Server/CenterPanel/Server/Kpis/Kpis.module.scss
@@ -5,18 +5,24 @@
  
   .cols_3 {
     display: grid;
-    grid-template-columns: 4fr 4fr 4fr;
+
     justify-content: center;
     gap: 10px;
 
-    @media screen and (max-width:1700px) {
+    &.resized{
+      grid-template-columns: 12fr;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      gap: 0;
+    }
+
+    &.not_resized{
       grid-template-columns: 6fr 6fr;
-      align-items: center;
-      justify-content: center;
+
     }
   }
 
- 
   padding: 20px;
 
   .grouped_charts {
