--- a/src/components/Server/Server.module.scss
+++ b/src/components/Server/Server.module.scss
@@ -10,5 +10,9 @@
         display: grid;
         grid-template-columns: 2fr 10fr;
         height: 100%;
+
+        @media screen and (max-width:1800px) {
+   
+        }
     }
 }
