--- a/src/components/Server/CenterPanel/Alerts/AlertConfigure/AlertConfigure.module.scss
+++ b/src/components/Server/CenterPanel/Alerts/AlertConfigure/AlertConfigure.module.scss
@@ -3,26 +3,30 @@
 
 .wrapper {
     padding: 20px;
+    position: relative;
 
     h3 {
         color: $color-font-main;
         margin-bottom: 10px;
     }
 
+    .error_message {
+        @include error_message;
+    }
+
     table {
         @include server-table;
         table-layout: fixed;
 
-        .directive{
-            
-            .directive_item{
+        .directive {
+
+            .directive_item {
                 display: grid;
                 grid-template-columns: 4fr 8fr;
                 align-items: center;
                 margin-bottom: 10px;
             }
         }
-    
 
         ul {
             margin-left: 0;
@@ -30,6 +34,9 @@
             max-height: 150px;
             overflow: auto;
 
+            .empty_directives{
+                text-align: center;
+            }
             li {
                 list-style: none;
                 padding: 5px;
@@ -44,10 +51,8 @@
                 .directive_item {
                     display: grid;
                     grid-template-columns: 6fr 6fr;
-                    border-bottom: 1px solid rgb(216, 216, 216);
-
-                    .label {}
-                }
+                    border-bottom: 1px solid rgb(216, 216, 216);   
+                }     
 
             }
         }
@@ -55,14 +60,12 @@
         .action_btns_wrapper {
             display: flex;
             flex-direction: column;
-         
-            button{
-             margin-left: auto;
-             margin-right: auto;
-             margin-bottom: 5px;
+
+            button {
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 5px;
             }
-         
-            
         }
     }
 }
