finished aler format crud operations

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body {
   font-family: "Inter";
 }
 
+textarea,input,select,button{
+  font-family: "Inter";
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
