--- a/src/components/Designer/CustomNodes/BaseNode.module.scss
+++ b/src/components/Designer/CustomNodes/BaseNode.module.scss
@@ -7,6 +7,7 @@
 
 .node_wrapper {
     position: relative;
+
     &.outlined {
         border-radius: 5px;
         padding: 2.3px;
@@ -15,12 +16,12 @@
         transition: padding 0.1s ease-in-out;
     }
 
-    .delete_btn_wrapper{
+    .delete_btn_wrapper {
         position: absolute;
-        top:-25px;
+        top: -25px;
         right: 0;
 
-        button{
+        button {
             z-index: 9999;
             border-radius: 20px;
             border: 0;
@@ -107,6 +108,23 @@
 .node_label {
     font-size: 0.9rem;
     padding: 10px 20px;
+}
+
+.directions_wrapper{
+    position: absolute;
+    bottom:-20px;
+    left: 0;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+   
+    select{
+        padding-left: 10px;
+        padding-right: 10px;
+        width: 100%;
+
+        text-align: center;
+    }
 }
 
 .handle {
