--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -9,6 +9,7 @@ $bg-top-menu-btn-default: rgb(74, 148, 190);
 $bg-top-menu-btn-hover: rgb(55, 109, 139);
 $bg-top-menu-btn-active: rgb(39, 74, 94);
 $bg-delete-btn: rgb(230, 56, 56);
+$bg-warning-btn:rgb(235, 199, 0);
 
 //--COLORS--
 $color-list-label: #727272;
